# c-scikit-learn

./: CMakeLists.txt  DOCUMENTATION.md  README.md
Writing a New Class in C/: Makefile  main.c  out  shell.nix
examples/: main.c
examples/dataset_utils/: dataset_read.c  dataset_read.h
lib/: CMakeLists.txt
lib/src/c-skl/: skl_helper.c  skl_helper.h
lib/src/c-skl/linear_model/linear_regression/: skl_linear_regression.h
lib/src/c-skl/svm/svr/: skl_svr.h
src/: Makefile  main.c  out  shell.nix
src/dataset_utils/: gmf_global.h  gmf_memory.c
src/skl/: helper.c  helper.h  stack.c  stack.h
src/skl/linear_model/linear_regression/: linear_regression.c  linear_regression.h  skl_linear_regression.c  skl_linear_regression.h
src/skl/svm/svr/: skl_svr.c  skl_svr.h
test-exe/: CMakeLists.txt  main.c
test_data/: testing_set.txt  training_set.txt
